<resources>
    <string name="app_name">PhysioFit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_profile">Ahmed Naveed</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="chat">Chat</string>
    <string name="video_call">Video Call</string>
    <string name="voice_call">Voice Call</string>
    <string name="more">View More</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="back">Back</string>
    <string name="profile_image">Profile Picture</string>
    <string name="call">Call</string>
    <string name="attach">attach file</string>
    <string name="send">Send message</string>
    <string name="camera">Open camera</string>
    <string name="voice">Send voice note</string>
</resources>